# rust-modules

./: Cargo.toml  README.md  memo.md
src/: a.rs  lib.rs  main.rs  path.rs  use_.rs
src/aa/: bb.rs  mod.rs
workspace/: Cargo.toml
workspace/binary/: Cargo.toml
workspace/binary/src/: main.rs
workspace/library1/: Cargo.toml
workspace/library1/src/: lib.rs
workspace/library2/: Cargo.toml
