[package]
name = "rust-modules"
version = "0.1.1"
edition = "2018"
description = "My studying rust modules."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-modules-dependency = { git = "https://github.com/emgniddikur/rust-modules-dependency" }
